[gd_scene load_steps=4 format=3 uid="uid://lmawnpkbefr4"]

[ext_resource type="Script" path="res://Scripts/enemy_legion.gd" id="1_ajidc"]
[ext_resource type="Texture2D" uid="uid://djhtemlp1tjx6" path="res://Resources/Sprites/dorver-idle0.png" id="2_qlcov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2bcnw"]

[node name="legion" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ajidc")

[node name="PlayerSelect" type="Button" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_2bcnw")
toggle_mode = true
flat = true
metadata/_edit_use_anchors_ = true

[node name="EnemySprite" type="Sprite2D" parent="PlayerSelect"]
modulate = Color(0.552941, 1, 0.588235, 1)
position = Vector2(32, 32)
texture = ExtResource("2_qlcov")

[connection signal="legion_selected" from="." to="." method="_on_legion_selected"]
[connection signal="toggled" from="PlayerSelect" to="." method="_on_selected_toggled"]
